--- a/index.html
+++ b/index.html
@@ -10,33 +10,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body id="body">
-    <div id="keyboard" style="width: 100%; height: 100vh; position: absolute;">
-    </div>
-
-    <div style="width: 400px; position: absolute; background: white; right: 0">
-        <canvas id="histogram"></canvas>
-    </div>
-
-    <div class="container-fluid text-center" id="container" style="height: 500px; display: none;">
-
-    </div>
+    <p id="next">Do</p>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    <script type="module" src="histogram.mjs"></script>
-    <script type="module" src="midi.mjs"></script>
-    <script type="module" src="recorder.mjs"></script>
-
-    <script src="chronometer.js"></script>
-    <script src="midi-key-on-list.js"></script>
-    <script src="midi.js"></script>
-    <script src="keyboard-layout.js"></script>
-    <script src="keyboard.js"></script>
-    <script src="key-visualizer.js"></script>
-    <script src="window.mjs"></script>
-
-
     <script type="module" src="main.mjs"></script>
+
 </body>
 </html>
